--- a/GUI/Themes/Dark.xaml
+++ b/GUI/Themes/Dark.xaml
@@ -144,6 +144,30 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="IconButton" TargetType="Button">
+        <Setter Property="Background" Value="#00000000"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="Transparent">
+                        <Grid Background="Transparent">
+                            <Path x:Name="ButtonPath" Stroke="{DynamicResource NormalTextBrush}" StrokeThickness="1.25" Data="{TemplateBinding Content}"
+                                  Stretch="Uniform"/>
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ButtonPath" Property="Stroke" Value="White"/>
+                            <Setter TargetName="ButtonPath" Property="StrokeThickness" Value="2.5"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <BorderGapMaskConverter x:Key="BorderGapMaskConverter"/>
     <Style TargetType="GroupBox">
         <Setter Property="Foreground" Value="{DynamicResource NormalTextBrush}"/>
