--- a/GUI/Themes/Dark.xaml
+++ b/GUI/Themes/Dark.xaml
@@ -141,6 +141,9 @@
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="Background" Value="{DynamicResource NormalButtonClickedBackgroundBrush}"/>
             </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="{DynamicResource HighlightButtonDisabledBackgroundBrush}"/>
+            </Trigger>
         </Style.Triggers>
     </Style>
 
