--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -139,7 +139,7 @@
                                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5"
                                                    DataContext="{Binding PersonDrawingKey}">
                                             <Label Content="Booked out by" VerticalAlignment="Center"/>
-                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch" IsReadOnly="True">
                                                 <TextBox.Text>
                                                     <MultiBinding StringFormat="{}{0} {1}">
                                                         <Binding Path="Rank" Converter="{StaticResource RankToStr}"/>
@@ -162,7 +162,7 @@
                                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5"
                                                    DataContext="{Binding PersonIssuingKey}">
                                             <Label Content="Issued by" VerticalAlignment="Center"/>
-                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch" IsReadOnly="True">
                                                 <TextBox.Text>
                                                     <MultiBinding StringFormat="{}{0} {1}">
                                                         <Binding Path="Rank" Converter="{StaticResource RankToStr}"/>
@@ -193,7 +193,7 @@
                                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5"
                                                    DataContext="{Binding PersonDrawingKey}">
                                             <Label Content="Last borrowed by" VerticalAlignment="Center"/>
-                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch" IsReadOnly="True">
                                                 <TextBox.Text>
                                                     <MultiBinding StringFormat="{}{0} {1}">
                                                         <Binding Path="Rank" Converter="{StaticResource RankToStr}"/>
@@ -216,7 +216,7 @@
                                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5"
                                                    DataContext="{Binding PersonIssuingKey}">
                                             <Label Content="Last issued by" VerticalAlignment="Center"/>
-                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch" IsReadOnly="True">
                                                 <TextBox.Text>
                                                     <MultiBinding StringFormat="{}{0} {1}">
                                                         <Binding Path="Rank" Converter="{StaticResource RankToStr}"/>
@@ -239,12 +239,13 @@
                                         <Separator Margin="0,10,0,10"/>
                                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
                                             <Label Content="Last booked in at" VerticalAlignment="Center"/>
-                                            <TextBox Text="{Binding Path=TimeReturned, StringFormat='d/M/yyyy HH:mm'}" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                            <TextBox Text="{Binding Path=TimeReturned, StringFormat='d/M/yyyy HH:mm'}" 
+                                                     VerticalAlignment="Center" HorizontalAlignment="Stretch" IsReadOnly="True"/>
                                         </DockPanel>
                                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5"
                                                    DataContext="{Binding PersonReturningKey}">
                                             <Label Content="Last returned by" VerticalAlignment="Center"/>
-                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch" IsReadOnly="True">
                                                 <TextBox.Text>
                                                     <MultiBinding StringFormat="{}{0} {1}">
                                                         <Binding Path="Rank" Converter="{StaticResource RankToStr}"/>
@@ -267,7 +268,7 @@
                                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5"
                                                    DataContext="{Binding PersonReceivingKey}">
                                             <Label Content="Last received by" VerticalAlignment="Center"/>
-                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch">
+                                            <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch" IsReadOnly="True">
                                                 <TextBox.Text>
                                                     <MultiBinding StringFormat="{}{0} {1}">
                                                         <Binding Path="Rank" Converter="{StaticResource RankToStr}"/>
